deploy/keycloak_deploy_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: jwt-keycloak  
  labels:
    app: keycloak
spec:
  selector:
    app: keycloak
  ports:
    - protocol: "TCP"
      port: 8080 
      targetPort: 8080    
  type: ClusterIP


---



apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: jwt-keycloak  
  labels:
    app: keycloak
spec:
  replicas: 2
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          #image: quay.io/keycloak/keycloak:23.0.6
          image: quay.io/keycloak/keycloak:latest
          args: ["start-dev"]
          #image: quay.io/keycloak/keycloak:21.1.1
          #args: ["start", "--cache-stack=kubernetes", "--spi-login-protocol-openid-connect-legacy-logout-redirect-uri=true"]
          ports:
            - name: http
              containerPort: 8080
            - name: jgroups
              containerPort: 7600

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: keycloak-vc
  namespace: jwt-keycloak  
spec:
  hosts:
  - tt.nuwas.nn 
  gateways:
  - istio-system/nuwas-gateway
  http:
  - match:
    - uri:
        prefix: /keycloak
    route:
     - destination:
        host: keycloak
        port:
          number: 8080
