deploy/authorization_policy_allow_crd.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-keycloak-access
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  rules:
  - to:
      - operation:
          paths:
          - "/keycloak/*"
